@@ -4,6 +4,9 @@ The format is based on [Keep a Changelog](http://keepachangelog.com/).
 
 ## [Unreleased]
 
+### Changed
+- update_booking_datetime get more args
+
 ## [v0.0.4] - Thu, 27 Jul 2017 18:41:36 +0900
 
 ### Fixed
